SERVER-49718 Log message reporting corruption doesn't mention namespace